--- a/templates/template.html
+++ b/templates/template.html
@@ -14,7 +14,7 @@
   <div class="alert alert-success d-flex align-items-center" role="alert">
     <i class="fa-solid fa-circle-check fa-4x" style="padding-right:50px ;padding-left:450px ;"></i>
     <div> 
-      <h1 class="big-heading">Thanks for using RPD</h1>
+      <h1 class="big-heading">Thanks for using Uzhavan</h1>
     </div>
   </div>
   <section style="padding-left:496px ;padding-top:7%; padding-bottom:8.3%;">
