--- a/templates/template.html
+++ b/templates/template.html
@@ -32,5 +32,34 @@
 {% else %}
   <h1 style="text-align:center ;">Error:Check your Uploaded Image !!</h1>
   {% endif %}
+  <div class="container"background="bg.jpg">
+    <div>
+      <h1>PRICE HISTORY</h1>
+      <table class="table table-striped">
+          <thead>
+              <tr>
+                  <th>city</th>
+                  <th>district</th>
+                  <th>state</th>
+                  <th>min_price</th>
+                  <th>max_price</th>
+                  <th>modal_price</th>
+              </tr>
+          </thead>
+          <tbody>
+              {% for index, row in data.iterrows() %}
+              <tr>
+                  <td>{{ row['market'] }}</td>
+                  <td>{{ row['district'] }}</td>
+                  <td>{{ row['state'] }}</td>
+                  <td>{{ row['min_price'] }}</td>
+                  <td>{{ row['max_price'] }}</td>
+                  <td>{{ row['modal_price'] }}</td>
+              </tr>
+              {% endfor %}
+          </tbody>
+      </table>
+    </div>
+  </div>
 </body>
 </html>
